adicionado a funcionalidade de editar código de resgate para o app mobile
